--- a/themes/castanet/layouts/partials/head.html
+++ b/themes/castanet/layouts/partials/head.html
@@ -9,5 +9,5 @@
 {{ end }}
 </title>
 <link rel="canonical" href="{{ .Permalink }}">
-<link rel="alternate" type="application/rss+xml" title="Podcast" href="https://www.quicheanon.com/episode/index.xml"/>
+<link rel="alternate" type="application/rss+xml" title="Quiche-Anon Podcast" href="https://www.quicheanon.com/episode/index.xml"/>
 {{ partial "head_includes.html" . }}
