--- a/themes/castanet/layouts/partials/head.html
+++ b/themes/castanet/layouts/partials/head.html
@@ -1,13 +1,12 @@
 {{ partial "meta.html" . }}
 {{ partial "seo.html" . }}
 <title>
-{{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" }}
-{{ if eq $url "/" }}
+{{- $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" -}}
+{{- if eq $url "/" -}}
     {{ .Site.Title }}
-{{ else }}
-    {{ if .Params.Heading }} {{ .Params.Heading }} {{ else }} {{ .Title }} {{ end }}
-{{ end }}
+{{- else -}}
+    {{ if .Params.Heading }}{{ .Params.Heading }}{{ else }}{{ .Title }}{{ end }}
+{{- end -}}
 </title>
 <link rel="canonical" href="{{ .Permalink }}">
-<link rel="alternate" type="application/rss+xml" title="Quiche-Anon Podcast" href="https://www.quicheanon.com/episode/index.xml"/>
 {{ partial "head_includes.html" . }}
